--- a/suraif-archive/template copy/style.css
+++ b/suraif-archive/template copy/style.css
@@ -11,6 +11,7 @@ body {
 {
 	height: 75px;
 	width: 125px;
+	margin-left: -35px;
 }
 
 .dashboto-logo p:nth-child(2) {
@@ -158,7 +159,8 @@ button {
 
 .tableheading
 {
-	position: fixed;
+	position: sticky;
+	top: 0;
 	width: 100%;
 }
 
@@ -166,8 +168,29 @@ table
 {
 	width: 90%;
 	height: 80%;
-	overflow: auto;
 }
+
+.tableSection
+{	
+	justify-content: space-around;
+	position: sticky;
+	top: 0;
+	overflow-y: auto;
+	height: 450px;
+}
+
+thead
+{
+	position: sticky;
+	top: 0;
+}
+
+th
+{
+	position: sticky;
+	top: 0;
+}
+
 
 .rwd-table {
   margin: auto;
