--- a/suraif-archive/template copy/style.css
+++ b/suraif-archive/template copy/style.css
@@ -11,7 +11,7 @@ body {
 {
 	height: 75px;
 	width: 125px;
-	margin-left: -35px;
+	margin-left: -30px;
 }
 
 .dashboto-logo p:nth-child(2) {
@@ -25,12 +25,15 @@ body {
 	margin-top: -5px;
 }
 
-
 .DashBoardOption {
 	width: 20%;
 	height: 100vh;
 	padding: 0px 2%;
 	float: left;
+}
+
+.logo{
+	margin-left: 2px;
 }
 
 button {
