--- a/suraif-archive/template/style.css
+++ b/suraif-archive/template/style.css
@@ -11,6 +11,7 @@ body {
 {
 	height: 75px;
 	width: 125px;
+	margin-left: -30px;
 }
 
 .dashboto-logo p:nth-child(2) {
@@ -30,6 +31,10 @@ body {
 	height: 100vh;
 	padding: 0px 2%;
 	float: left;
+}
+
+.logo{
+	margin-left: 2px;
 }
 
 button {
