--- a/resources/css/police/igp/addPoliceman.css
+++ b/resources/css/police/igp/addPoliceman.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700|Source+Sans+Pro:300,600");
-
+@import url("https://kit.fontawesome.com/251590f28b.css");
 body {
 	font-family: "Lato", sans-serif;
 	height: 100%;
