--- a/avishi_user/fine/view_fine.css
+++ b/avishi_user/fine/view_fine.css
@@ -13,9 +13,13 @@ body {
 	margin-left: -30px;
 }
 
-.dashboto-logo p:nth-child(2) {
+.dashboto-logo p:nth-child(1) {
 	font-weight: 600;
 }
+
+/* .dashboto-logo p:nth-child(2) {
+	font-weight: 600;
+} */
 
 .tagline {
 	color: #9b9ea2;
