--- a/resources/css/police/login.css
+++ b/resources/css/police/login.css
@@ -1,62 +1,93 @@
-/*Header*/
-.header
-{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    margin-bottom: 20px;
-    background-color: #14abfa;
-
-}
-
-img
-{
-    width: 120px;
-    height: 80px;
-    padding: 5px;
-}
-
-.profileLogo
-{
-    width: 100px;
-    height: 100px;
-    padding: 15px;
+* {
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Lato", sans-serif;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
   width: 100%;
   position: fixed;
 }
-@keyframes spinner {
-  0% {
-    transform: rotateZ(0deg);
- }
-  100% {
-    transform: rotateZ(359deg);
- }
+
+.header
+{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    margin-bottom: 20px;
+    background-color: #14abfa;
 }
-* {
-  box-sizing: border-box;
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 85%;
+  width: 60%;
+  border: #14abfa 1px solid;
+  padding: 4%;
+
 }
+
+footer
+{
+  width: 100%;
+  height: 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+  margin-top: 20px;
+  background-color: #14abfa;
+}
+
+
+
+.policeLoginImage{
+  width: 60%;
+  border: #14abfa 1px solid;
+  height: 100%;
+  padding: 5%;
+  justify-content: center;
+  align-items: center;
+  border: #14abfa 1px solid;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  width: 40%;
   min-height: 100%;
-  padding: 20px;
-  background-image: url("/resources/images/Background.jpeg");
+  border: #14abfa 1px solid;
+}
+
+
+.ntsflogoDiv
+{
+  width: 6%;
+}
+
+.ntsflogo
+{
+    width: 100%;
+    height: 100%;
+    padding: rem(10px);
 }
 
 .login {
   border-radius: 2px 2px 5px 5px;
   padding: 10px 20px 20px 20px;
   width: 90%;
-  max-width: 320px;
+  max-width: 100%;
   background: #fff;
   position: relative;
   padding-bottom: 80px;
@@ -136,7 +167,7 @@ footer {
   display: block;
   padding-top: 50px;
   text-align: center;
-  color: #ddd;
+  color: black;
   font-weight: normal;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);
   font-size: 0.8em;
@@ -194,3 +225,4 @@ footer a, footer a:link {
 	visibility: visible;
 }
 
+  
