--- a/resources/css/police/login.css
+++ b/resources/css/police/login.css
@@ -49,11 +49,12 @@ footer
 
 .policeLoginImage{
   width: 60%;
-  border: #14abfa 1px solid;
+
   height: 100%;
   padding: 5%;
   justify-content: center;
   align-items: center;
+  box-shadow: 0px 1px 5px rgba(14, 171, 250, 0.5);
 }
 
 .wrapper {
@@ -63,7 +64,7 @@ footer
   justify-content: center;
   width: 40%;
   min-height: 100%;
-  border: #14abfa 1px solid;
+  box-shadow: 0px 1px 5px rgba(14, 171, 250, 0.5); 
 }
 
 .ntsflogoDiv
