View fines done completely

--- a/user_service/user/fines/main.css
+++ b/user_service/user/fines/main.css
@@ -97,9 +97,9 @@ button {
     color: #14abfa;
 }
 
-.menu a:nth-child(4) {
+/* .menu a:nth-child(4) {
     color: #14abfa;
-}
+} */
 
 .menu a i {
     font-size: 1.7em;
