--- a/resources/css/police/login.css
+++ b/resources/css/police/login.css
@@ -60,6 +60,8 @@ footer
   justify-content: center;
   align-items: center;
   box-shadow: 0px 1px 5px rgba(14, 171, 250, 0.5);
+  border-top-left-radius:  10px;
+  border-bottom-left-radius:  10px;
 }
 
 .wrapper {
@@ -70,22 +72,23 @@ footer
   width: 40%;
   min-height: 100%;
   box-shadow: 0px 1px 5px rgba(14, 171, 250, 0.5); 
+  border-bottom-right-radius:  10px;
+  border-top-right-radius:  10px;
 }
 
 .ntsflogoDiv
 {
-  width: 6%;
+  width: 8%;
 }
-
 .emptyDiv
 {
-  width: 6%;
+  width: 8%;
 }
 .ntsflogo
 {
-    width: 100%;
+    width: 70%;
     height: 100%;
-    padding: rem(10px);
+    padding: 10%
 }
 
 .login {
