--- a/resources/css/police/igp/viewPoliceman.css
+++ b/resources/css/police/igp/viewPoliceman.css
@@ -1,5 +1,5 @@
 /*CSS for model to ask are you sure want to delete??*/
-.modal {
+.model {
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
@@ -9,18 +9,42 @@
 	height: 100%; /* Full height */
 	overflow: auto; /* Enable scroll if needed */
 	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
   }  
 
-.modal-content {
+.model-content {
+	display: flex;
+	flex-direction: column;
 	background-color: #fefefe;
-	margin: 15% auto; /* 15% from the top and centered */
-	margin-left: 55%; /*Altered*/
-	padding: 30px;
+	margin-top: 15%;
+	margin-left: 50%; 
+	margin-right: 30% ;
+	padding: 1.5%;
 	border: 1px solid #888;
 	width: 20%; /* Could be more or less, depending on screen size */
+	height: 15%;
   }
   
+.model-options{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+  }
+  
+.model-button
+{
+	background: #14abfa;
+	border: solid 6px #14abfa;
+	width: 30%;
+	border-radius: 5px;
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Source Sans Pro", sans-serif;
+	font-size: 1.1em;
+}
+  /* The Close Button */
+  .close {
+}
   /* The Close Button */
   .close {
 	color: #aaa;
