--- a/user-side/resources/css/login.css
+++ b/user-side/resources/css/login.css
@@ -95,7 +95,7 @@ body {
     border: 1px solid #ddd;
     transition: border-width 0.2s ease;
     border-radius: 2px;
-    color: #ccc;
+    color: #444;
 }
 
 .login input+i.fa {
@@ -112,6 +112,13 @@ body {
     outline: none;
     color: #444;
     border-color: #2196f3;
+    border-left-width: 35px;
+}
+
+/* Login input validation */
+.login input.invalid:focus {
+    color: #444;
+    border-color: #ff0000;
     border-left-width: 35px;
 }
 
@@ -173,6 +180,14 @@ body {
     transition: top 0.3s 0.3s ease, opacity 0.3s 0.3s ease, border-radius 0.3s ease;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
 }
+
+/* Login disable button */
+.login button:disabled,
+button[disabled] {
+    opacity: 0.5;
+    cursor: default;
+}
+
 
 .login:not(.loading) button:hover {
     box-shadow: 0px 1px 3px #2196f3;
