--- a/user-side/user/fines/main.css
+++ b/user-side/user/fines/main.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     height: 100%;
     width: 100%;
     position: fixed;
@@ -31,7 +31,7 @@ button {
     border-radius: 3px;
     color: #ffffff;
     font-weight: 700;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-size: 1.2em;
     margin-left: 6px;
 }
