--- a/user-side/user/profile/style.css
+++ b/user-side/user/profile/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     height: 100%;
     width: 100%;
     position: fixed;
@@ -31,7 +31,7 @@ button {
     border-radius: 3px;
     color: #ffffff;
     font-weight: 700;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     font-size: 1.2em;
     margin-left: 6px;
 }
@@ -64,11 +64,25 @@ button {
     float: left;
 }
 
+/* .ntsf-logo new changes starts here */
+
 .ntsf-logo {
-    height: 75px;
-    width: 125px;
-    margin-left: -30px;
+    height: 50%;
+    width: 30%;
 }
+
+.logo-name {
+    width: 60%;
+}
+
+.ntsf-logo {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Ends here */
+
 
 
 /* side-panel menu */
@@ -155,4 +169,331 @@ button {
     right: 20px;
     top: -8px;
     color: white;
+}
+
+/** Inspired by: http://graphicburger.com/flat-design-ui-components/ **/
+/** Line-chart and donut-chart made by @kseso https://codepen.io/Kseso/pen/phiyL **/
+
+
+/************************************ FONTS ************************************/
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
+@import url(https://weloveiconfonts.com/api/?family=entypo|fontawesome|zocial);
+
+/* entypo */
+[class*="entypo-"]:before {
+    font-family: 'entypo', sans-serif;
+}
+
+/* fontawesome */
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+
+/* zocial */
+[class*="zocial-"]:before {
+    font-family: 'zocial', sans-serif;
+}
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('https://jlalovi-cv.herokuapp.com/font/icomoon.eot');
+    src: url('https://jlalovi-cv.herokuapp.com/font/icomoon.eot?#iefix') format('embedded-opentype'),
+        url('https://jlalovi-cv.herokuapp.com/font/icomoon.ttf') format('truetype'),
+        url('https://jlalovi-cv.herokuapp.com/font/icomoon.woff') format('woff'),
+        url('https://jlalovi-cv.herokuapp.com/font/icomoon.svg#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/************************************* END FONTS *************************************/
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+    background: #1f253d;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+h1 {
+    font-size: 23px;
+}
+
+h2 {
+    font-size: 17px;
+}
+
+p {
+    font-size: 15px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 15px;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+h1, h2, p, a, span {
+    color: #fff;
+}
+
+.scnd-font-color {
+    color: #9099b7;
+}
+
+.horizontal-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.horizontal-list li {
+    float: left;
+}
+
+.clear {
+    clear: both;
+}
+
+.icon {
+    font-size: 25px;
+}
+
+.titular {
+    display: block;
+    line-height: 60px;
+    margin: 0;
+    text-align: center;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.button {
+    display: block;
+    width: 175px;
+    line-height: 50px;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 5px;
+    -webkit-transition: background .3s;
+    transition: background .3s;
+}
+
+.button:hover {
+    text-decoration: none;
+}
+
+.profile-picture {
+    border-radius: 100%;
+    overflow: hidden;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+.big-profile-picture {
+    margin: 0 auto;
+    border: 5px solid #50597b;
+    width: 150px;
+    height: 150px;
+}
+
+
+/** MAIN CONTAINER **/
+
+.main-container {
+    font-family: 'Ubuntu', sans-serif;
+    width: 950px;
+    height: 1725px;
+    margin: 6em auto;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+
+/** CONTAINERS **/
+.container {
+    float: left;
+    width: 300px;
+}
+
+.block {
+    margin-bottom: 25px;
+    background: #394264;
+    border-radius: 5px;
+}
+
+/******************************************** LEFT CONTAINER *****************************************/
+.left-container {}
+
+.menu-box {
+    height: 360px;
+}
+
+.menu-box .titular {
+    background: #11a8ab;
+}
+
+.menu-box-menu .icon {
+    display: inline-block;
+    vertical-align: top;
+    width: 28px;
+    margin-left: 20px;
+    margin-right: 15px;
+}
+
+.menu-box-number {
+    width: 36px;
+    line-height: 22px;
+    background: #50597b;
+    text-align: center;
+    border-radius: 15px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+
+.menu-box-menu li {
+    height: 60px;
+    position: relative;
+}
+
+.menu-box-tab {
+    line-height: 60px;
+    display: block;
+    border-bottom: 1px solid #1f253d;
+    -webkit-transition: background .2s;
+    transition: background .2s;
+}
+
+.menu-box-tab:hover {
+    background: #50597b;
+    border-top: 1px solid #1f253d;
+    text-decoration: none;
+}
+
+.menu-box-tab:hover .icon {
+    color: #fff;
+}
+
+.menu-box-tab:hover .menu-box-number {
+    background: #e64c65;
+}
+
+/************************************************** MIDDLE CONTAINER **********************************/
+.middle-container {
+    margin: 0 25px;
+}
+
+.profile {
+    height: 410px;
+}
+
+.add-button .icon {
+    float: right;
+    line-height: 18px;
+    width: 23px;
+    border: 2px solid;
+    border-radius: 100%;
+    font-size: 18px;
+    text-align: center;
+    margin: 10px;
+}
+
+.add-button .icon:hover {
+    color: #e64c65;
+    border-color: #e64c65;
+}
+
+.user-name {
+    margin: 25px 0 16px;
+    text-align: center;
+}
+
+.profile-description {
+    width: 210px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.profile-options {
+    padding-top: 23px;
+}
+
+.profile-options li {
+    border-left: 1px solid #1f253d;
+}
+
+.profile-options p {
+    margin: 0;
+}
+
+.profile-options a {
+    display: block;
+    width: 99px;
+    line-height: 60px;
+    text-align: center;
+    -webkit-transition: background .3s;
+    transition: background .3s;
+}
+
+.profile-options a:hover {
+    text-decoration: none;
+    background: #50597b;
+}
+
+.profile-options a:hover.comments .icon {
+    color: #fcb150;
+}
+
+.profile-options a:hover.views .icon {
+    color: #11a8ab;
+}
+
+.profile-options a:hover.likes .icon {
+    color: #e64c65;
+}
+
+.profile-options .icon {
+    padding-right: 10px;
+}
+
+.profile-options .comments {
+    border-top: 4px solid #fcb150;
+}
+
+.profile-options .views {
+    border-top: 4px solid #11a8ab;
+}
+
+.profile-options .likes {
+    border-top: 4px solid #e64c65;
 }
