--- a/user-side/resources/css/main.css
+++ b/user-side/resources/css/main.css
@@ -110,7 +110,8 @@ button {
 .dashboard-heading {
     width: 76%;
     float: right;
-    background: #ffffff;
+    /* background: #ffffff; */
+    background: #394264;
     position: relative;
     color: #73787c;
     margin-top: 20px;
@@ -119,7 +120,8 @@ button {
 
 .dashboard-heading .all {
     margin-top: 20px;
-    background: #f2f2f2;
+    /* background: #f2f2f2; */
+    background: #394264;
     width: 100%;
     min-height: 100vh;
 }
