--- a/user-side/user/profile/style.css
+++ b/user-side/user/profile/style.css
@@ -69,6 +69,7 @@ button {
 .ntsf-logo {
     height: 50%;
     width: 30%;
+    color: white;
 }
 
 .logo-name {
@@ -135,13 +136,13 @@ button {
     /* background: #ffffff; */
     position: relative;
     color: #73787c;
-    margin-top: 20px;
-    margin-right: 20px;
+    /* margin-top: 20px; */
+    margin-right: 15px;
     position: relative;
 }
 
 .dashboard-heading .all {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     background: #f2f2f2;
     width: 100%;
     min-height: 100vh;
@@ -170,6 +171,11 @@ button {
     right: 20px;
     top: -8px;
     color: white;
+    margin-right: 85px;
+    margin-top: 25px;
+    font-family: "Ubuntu", sans-serif;
+    font-size: medium;
+    /* font-weight: bold; */
 }
 
 /** Inspired by: http://graphicburger.com/flat-design-ui-components/ **/
@@ -331,7 +337,9 @@ h1, h2, p, a, span {
     border: 2px solid #50597b;
     width: 40px;
     height: 40px;
-    float: left;
+    float: right;
+    margin-right: 50px;
+    margin-top: 3px;
 }
 
 
