--- a/user-side/user/complaint/view/index.html
+++ b/user-side/user/complaint/view/index.html
@@ -7,8 +7,10 @@
           content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet"
+          href="./main.css"> -->
     <link rel="stylesheet"
-          href="./main.css">
+          href="../../../resources/css/view-style.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -62,8 +64,12 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <div>
+            <div class="profile-picture small-profile-picture">
                 <p class="profile-username">Avishi Ganepola</p>
+                <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
+                <img width="40px"
+                     alt="Anne Hathaway picture"
+                     src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
             </div>
         </div>
     </div>
