--- a/user-side/resources/css/add.css
+++ b/user-side/resources/css/add.css
@@ -14,30 +14,24 @@
 }
 
 body {
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Lato", sans-serif;
     height: 100%;
     width: 100%;
     position: fixed;
 }
 
-h1, h2, h3, h4 {
+h1 {
     font-size: 25px;
     color: gray;
-}
-
-h4 {
-    font-size: 20px;
-    font-family: "Ubuntu", sans-serif;
-    color: #1f253d;
 }
 
 button {
     background: #14abfa;
     border: solid 6px #14abfa;
     border-radius: 3px;
-    color: #1f253d;
-    font-weight: bold;
-    font-family: "Ubuntu", sans-serif;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 1.2em;
     margin-left: 6px;
 }
@@ -57,7 +51,7 @@ button {
 
 .tagline {
     color: #9b9ea2;
-    /* font-weight: bold; */
+    font-weight: bold;
     padding: 0px 5px;
     margin-top: -5px;
     font-size: 20px;
@@ -70,26 +64,11 @@ button {
     float: left;
 }
 
-/* .ntsf-logo new changes starts here */
-
 .ntsf-logo {
-    height: 50%;
-    width: 30%;
-    color: white;
+    height: 75px;
+    width: 125px;
+    margin-left: -30px;
 }
-
-.logo-name {
-    width: 60%;
-}
-
-.ntsf-logo {
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-}
-
-/* Ends here */
-
 
 
 /* side-panel menu */
@@ -110,8 +89,7 @@ button {
     font-size: 1.2em;
 }
 
-/* Show add complaint on dashboard side panel */
-.menu a:nth-child(3) {
+.menu a:first-child {
     color: #14abfa;
 }
 
@@ -133,22 +111,23 @@ button {
     width: 76%;
     float: right;
     /* background: #ffffff; */
+    background: #fff;
     position: relative;
     color: #73787c;
-    /* margin-top: 20px; */
-    margin-right: 15px;
+    margin-top: 20px;
     position: relative;
 }
 
 .dashboard-heading .all {
-    /* margin-top: 20px; */
-    background: #f2f2f2;
+    margin-top: 20px;
+    /* background: #f2f2f2; */
+    background: #394264;
     width: 100%;
     min-height: 100vh;
 }
 
 .dashboard-heading .panel {
-    padding-bottom: 50px;
+    padding-bottom: 40px;
     background-color: #12abf7;
     margin-bottom: 20px;
 }
@@ -170,143 +149,6 @@ button {
     right: 20px;
     top: -8px;
     color: white;
-    margin-right: 85px;
-    margin-top: 25px;
-    font-family: "Ubuntu", sans-serif;
-    font-size: medium;
-    /* font-weight: bold; */
-}
-
-/************************************ FONTS ************************************/
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
-
-/************************************* END FONTS *************************************/
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-body {
-    background: #1f253d;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-h1 {
-    font-size: 23px;
-}
-
-h2 {
-    font-size: 17px;
-}
-
-p {
-    font-size: 15px;
-}
-
-a {
-    text-decoration: none;
-    font-size: 15px;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-h1, h2, p, a, span {
-    color: #fff;
-}
-
-.scnd-font-color {
-    color: #9099b7;
-}
-
-.horizontal-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.horizontal-list li {
-    float: left;
-}
-
-.clear {
-    clear: both;
-}
-
-.icon {
-    font-size: 25px;
-}
-
-/* .titular {
-    display: block;
-    line-height: 60px;
-    margin: 0;
-    text-align: center;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-} */
-
-.button {
-    display: block;
-    width: 175px;
-    line-height: 50px;
-    font-size: 16px;
-    font-weight: 700;
-    text-align: center;
-    margin: 0 auto;
-    border-radius: 5px;
-    -webkit-transition: background .3s;
-    transition: background .3s;
-}
-
-.button:hover {
-    text-decoration: none;
-}
-
-.profile-picture {
-    border-radius: 100%;
-    overflow: hidden;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
-
-/* .big-profile-picture {
-    margin: 0 auto;
-    border: 5px solid #50597b;
-    width: 150px;
-    height: 150px;
-    position: relative;
-} */
-
-/********************************************* PROFILE PICTURE ****************************************/
-.small-profile-picture {
-    border: 2px solid #50597b;
-    width: 40px;
-    height: 40px;
-    float: right;
-    margin-right: 50px;
-    margin-top: 3px;
-}
-
-/** CONTAINERS **/
-.container {
-    float: left;
-    width: 300px;
-}
-
-/********************************************* PROFILE PICTURE ****************************************/
-.small-profile-picture {
-    display: inline-block;
-    vertical-align: middle;
 }
 
 /********************************************* FORM ****************************************/
@@ -333,8 +175,6 @@ h1, h2, p, a, span {
     max-width: 100%;
     margin-top: -50px;
     height: 500px;
-    overflow-y: auto;
-
 }
 
 .formHeader {
@@ -343,9 +183,9 @@ h1, h2, p, a, span {
     padding: 20px 40px;
     position: sticky;
     font-family: "Ubuntu", sans-serif;
-    color: #1f253d;
+    color: #fff;
     position: center;
-    font-size: large;
+    font-size: 12px;
 }
 
 .formHeader h2 {
@@ -489,3 +329,82 @@ button[disabled] {
     font-family: "Ubuntu", sans-serif;
     color: #1f253d;
 }
+
+@media screen and (max-width: 601px) {
+    .fines-table tr:nth-child(2) {
+        border-top: none;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .fines-table tr:hover:not(:first-child) {
+        background-color: #d8e7f3;
+    }
+
+    .fines-table td:before {
+        display: none;
+    }
+
+    .fines-table th,
+    .fines-table td {
+        display: table-cell;
+        padding: .25em .5em;
+    }
+
+    .fines-table th:first-child,
+    .fines-table td:first-child {
+        padding-left: 0;
+    }
+
+    .fines-table th:last-child,
+    .fines-table td:last-child {
+        padding-right: 0;
+    }
+
+    .fines-table th,
+    .fines-table td {
+        padding: 1em !important;
+    }
+}
+
+.container {
+    text-align: left;
+}
+
+
+
+.ntsf-logo {
+    height: 50%;
+    width: 30%;
+    color: white;
+}
+
+.logo-name {
+    width: 60%;
+}
+
+.ntsf-logo {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* .ntsf-logo new changes starts here */
+
+.ntsf-logo {
+    height: 50%;
+    width: 30%;
+    color: white;
+}
+
+.logo-name {
+    width: 60%;
+}
+
+.ntsf-logo {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Ends here */
