--- a/user-side/user/fines/main1.css
+++ b/user-side/user/fines/main1.css
@@ -14,30 +14,24 @@
 }
 
 body {
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Lato", sans-serif;
     height: 100%;
     width: 100%;
     position: fixed;
 }
 
-h1, h2, h3, h4 {
+h1 {
     font-size: 25px;
     color: gray;
-}
-
-h4 {
-    font-size: 20px;
-    font-family: "Ubuntu", sans-serif;
-    color: #1f253d;
 }
 
 button {
     background: #14abfa;
     border: solid 6px #14abfa;
     border-radius: 3px;
-    color: #1f253d;
-    font-weight: bold;
-    font-family: "Ubuntu", sans-serif;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Source Sans Pro", sans-serif;
     font-size: 1.2em;
     margin-left: 6px;
 }
@@ -57,7 +51,7 @@ button {
 
 .tagline {
     color: #9b9ea2;
-    /* font-weight: bold; */
+    font-weight: bold;
     padding: 0px 5px;
     margin-top: -5px;
     font-size: 20px;
@@ -68,6 +62,95 @@ button {
     height: 100vh;
     padding: 0px 2%;
     float: left;
+}
+
+.ntsf-logo {
+    height: 75px;
+    width: 125px;
+    margin-left: -30px;
+}
+
+
+/* side-panel menu */
+.menu {
+    margin-top: 30px;
+    width: 100%;
+    padding: 0px;
+    margin-left: 8px;
+}
+
+.menu a {
+    width: 100%;
+    color: #666666;
+    text-decoration: none;
+    margin: 15px 0px;
+    float: left;
+    display: block;
+    font-size: 1.2em;
+}
+
+/* .menu a:first-child {
+    color: #14abfa;
+} */
+
+.menu a:nth-child(4) {
+    color: #14abfa;
+}
+
+.menu a i {
+    font-size: 1.7em;
+    color: #14abfa;
+    position: relative;
+    padding-right: 10px;
+    top: 3px;
+}
+
+.menu .fa-solid {
+    top: 6px;
+    padding-left: 2px;
+}
+
+/* dashboard-heading */
+.dashboard-heading {
+    width: 76%;
+    float: right;
+    background: #ffffff;
+    position: relative;
+    color: #73787c;
+    margin-top: 20px;
+    position: relative;
+}
+
+.dashboard-heading .all {
+    margin-top: 20px;
+    background: #f2f2f2;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.dashboard-heading .panel {
+    padding-bottom: 40px;
+    background-color: #12abf7;
+    margin-bottom: 20px;
+}
+
+.dashboard-heading .panel i {
+    border-radius: 50%;
+    background: #f4f4f4;
+    padding: 8px;
+    border: solid 2px;
+    position: relative;
+    left: 20px;
+    cursor: pointer;
+    background-color: #12abf7;
+}
+
+.dashboard-heading .panel .profile-username {
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+    top: -8px;
+    color: white;
 }
 
 /* .ntsf-logo new changes starts here */
@@ -90,240 +173,6 @@ button {
 
 /* Ends here */
 
-
-
-/* side-panel menu */
-.menu {
-    margin-top: 30px;
-    width: 100%;
-    padding: 0px;
-    margin-left: 8px;
-}
-
-.menu a {
-    width: 100%;
-    color: #666666;
-    text-decoration: none;
-    margin: 15px 0px;
-    float: left;
-    display: block;
-    font-size: 1.2em;
-}
-
-/* Show add complaint on dashboard side panel */
-.menu a:nth-child(3) {
-    color: #14abfa;
-}
-
-.menu a i {
-    font-size: 1.7em;
-    color: #14abfa;
-    position: relative;
-    padding-right: 10px;
-    top: 3px;
-}
-
-.menu .fa-solid {
-    top: 6px;
-    padding-left: 2px;
-}
-
-/* dashboard-heading */
-.dashboard-heading {
-    width: 76%;
-    float: right;
-    /* background: #ffffff; */
-    position: relative;
-    color: #73787c;
-    /* margin-top: 20px; */
-    margin-right: 15px;
-    position: relative;
-}
-
-.dashboard-heading .all {
-    /* margin-top: 20px; */
-    background: #f2f2f2;
-    width: 100%;
-    min-height: 100vh;
-}
-
-.dashboard-heading .panel {
-    padding-bottom: 50px;
-    background-color: #12abf7;
-    margin-bottom: 20px;
-}
-
-.dashboard-heading .panel i {
-    border-radius: 50%;
-    background: #f4f4f4;
-    padding: 8px;
-    border: solid 2px;
-    position: relative;
-    left: 20px;
-    cursor: pointer;
-    background-color: #12abf7;
-}
-
-.dashboard-heading .panel .profile-username {
-    display: inline-block;
-    position: absolute;
-    right: 20px;
-    top: -8px;
-    color: white;
-    margin-right: 85px;
-    margin-top: 25px;
-    font-family: "Ubuntu", sans-serif;
-    font-size: medium;
-    /* font-weight: bold; */
-}
-
-/************************************ FONTS ************************************/
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
-
-/************************************* END FONTS *************************************/
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-body {
-    background: #1f253d;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-h1 {
-    font-size: 23px;
-}
-
-h2 {
-    font-size: 17px;
-}
-
-p {
-    font-size: 15px;
-}
-
-a {
-    text-decoration: none;
-    font-size: 15px;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-h1, h2, p, a, span {
-    color: #fff;
-}
-
-.scnd-font-color {
-    color: #9099b7;
-}
-
-.horizontal-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.horizontal-list li {
-    float: left;
-}
-
-.clear {
-    clear: both;
-}
-
-.icon {
-    font-size: 25px;
-}
-
-/* .titular {
-    display: block;
-    line-height: 60px;
-    margin: 0;
-    text-align: center;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-} */
-
-.button {
-    display: block;
-    width: 175px;
-    line-height: 50px;
-    font-size: 16px;
-    font-weight: 700;
-    text-align: center;
-    margin: 0 auto;
-    border-radius: 5px;
-    -webkit-transition: background .3s;
-    transition: background .3s;
-}
-
-.button:hover {
-    text-decoration: none;
-}
-
-.profile-picture {
-    border-radius: 100%;
-    overflow: hidden;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
-
-/* .big-profile-picture {
-    margin: 0 auto;
-    border: 5px solid #50597b;
-    width: 150px;
-    height: 150px;
-    position: relative;
-} */
-
-/********************************************* PROFILE PICTURE ****************************************/
-.small-profile-picture {
-    border: 2px solid #50597b;
-    width: 40px;
-    height: 40px;
-    float: right;
-    margin-right: 50px;
-    margin-top: 3px;
-}
-
-/** CONTAINERS **/
-.container {
-    float: left;
-    width: 300px;
-}
-
-/********************************************* PROFILE PICTURE ****************************************/
-.small-profile-picture {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-@keyframes showMessage {
-    0%, 100% {
-        right: -255px
-    }
-
-    10% {
-        right: 0
-    }
-
-    90% {
-        right: 0;
-    }
-}
-
-/********************************************* TABLE SECTION ****************************************/
 
 .tableheading {
     position: sticky;
