--- a/user-side/user/profile/main.css
+++ b/user-side/user/profile/main.css
@@ -151,6 +151,164 @@ button {
     color: white;
 }
 
+
+.tableheading {
+    position: sticky;
+    top: 0;
+    width: 100%;
+}
+
+table {
+    width: 90%;
+    height: 80%;
+}
+
+.tableSection {
+    justify-content: space-around;
+    position: sticky;
+    top: 0;
+    overflow-y: auto;
+    height: 450px;
+}
+
+thead {
+    position: sticky;
+    top: 0;
+}
+
+th {
+    position: sticky;
+    top: 0;
+}
+
+/* fines table */
+.fines-table {
+    margin: auto;
+    min-width: 300px;
+    max-width: 100%;
+    border-collapse: collapse;
+}
+
+.fines-table tr:first-child {
+    border-top: none;
+    background: #9FB4C7;
+    color: #fff;
+}
+
+.fines-table tr {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    background-color: #f5f9fc;
+}
+
+.fines-table tr:nth-child(odd):not(:first-child) {
+    background-color: #ebf3f9;
+
+}
+
+.fines-table th {
+    display: none;
+}
+
+.fines-table td {
+    display: block;
+}
+
+.fines-table td:first-child {
+    margin-top: .5em;
+}
+
+.fines-table td:last-child {
+    margin-bottom: .5em;
+}
+
+.fines-table td:before {
+    content: attr(data-th) ": ";
+    font-weight: bold;
+    width: 120px;
+    display: inline-block;
+    color: #000;
+}
+
+.fines-table th,
+.fines-table td {
+    text-align: left;
+}
+
+.fines-table {
+    color: #333;
+    border-radius: .4em;
+    overflow: hidden;
+}
+
+.fines-table tr {
+    border-color: #bfbfbf;
+}
+
+.fines-table th,
+.fines-table td {
+    padding: .5em 1em;
+}
+
+@media screen and (max-width: 601px) {
+    .fines-table tr:nth-child(2) {
+        border-top: none;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .fines-table tr:hover:not(:first-child) {
+        background-color: #d8e7f3;
+    }
+
+    .fines-table td:before {
+        display: none;
+    }
+
+    .fines-table th,
+    .fines-table td {
+        display: table-cell;
+        padding: .25em .5em;
+    }
+
+    .fines-table th:first-child,
+    .fines-table td:first-child {
+        padding-left: 0;
+    }
+
+    .fines-table th:last-child,
+    .fines-table td:last-child {
+        padding-right: 0;
+    }
+
+    .fines-table th,
+    .fines-table td {
+        padding: 1em !important;
+    }
+}
+
+.container {
+    text-align: center;
+}
+
+
+
+.ntsf-logo {
+    height: 50%;
+    width: 30%;
+    color: white;
+}
+
+.logo-name {
+    width: 60%;
+}
+
+.ntsf-logo {
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
 /* .ntsf-logo new changes starts here */
 
 .ntsf-logo {
