Set box-sizing property for form inputs

--- a/user-side/resources/css/add.css
+++ b/user-side/resources/css/add.css
@@ -216,6 +216,7 @@ button {
     font-size: 14px;
     padding: 10px;
     width: 100%;
+    box-sizing: border-box
 }
 
 .form-control input:focus {
