--- a/user-side/user/fines/style.css
+++ b/user-side/user/fines/style.css
@@ -23,6 +23,12 @@ body {
 h1 {
     font-size: 25px;
     color: gray;
+    text-align: center;
+}
+
+h2, h3, h4 {
+    font-size: 20px;
+    color: gray;
 }
 
 button {
